--- a/BST Portal.html
+++ b/BST Portal.html
@@ -20,7 +20,7 @@
     line-height: 1.8;
     color: #f5f6f7;
   }
-  p {font-size: 16px;}
+  p {font-size: 14px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
     background-color: #ff0000; /* Red */
@@ -49,7 +49,6 @@
     padding-bottom: 70px;
     padding-left: 70px;
     padding-right: 70px;
-	
   }
   .navbar {
 	padding-top: 15px;
@@ -81,13 +80,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="https://bstportal.com/manufacturers/index.php"><span style="color: #e30613;"> BST</span>GlobalTrade</a>
+      <a class="navbar-brand" href="#about"><span style="color: #e30613;"> BST</span>GlobalTrade</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href=#about>ABOUT</a></li>
         <li><a href="https://bstportal.com/"><span style="color:#FF0000 ">PARENT COMPANY</span></a></li>
-        <li><a href="https://bstportal.com/manufacturers/services.php">SERVICES</a></li>
+        <li><a href="/BST Portal Services.html">SERVICES</a></li>
         <li><a href="https://bstportal.com/manufacturers/pricing.php">PRICING</a></li>
         <li><a href="https://bstportal.com/manufacturers/login.php">LOG IN</a></li>
       </ul>
@@ -447,6 +446,7 @@
   		<p>&nbsp;</p>
 
 <div class="inline__container" >
+	<a style="padding-left: 5%; padding-right: 5%;" class="btn" href="./BST Portal Services.html">BST SERVICES</a>
 	<h2><strong class="style1">4 WEBSITES AND AN INTERNATIONAL TRADE EXPO CENTER IN ONE PORTAL! </strong></h2>
 	<img class="img_1" src="./assets/BSTPortalSites.png" alt="BSTPortal.com sites">
 </div>
