--- a/BST Portal Services.html
+++ b/BST Portal Services.html
@@ -19,7 +19,10 @@
     line-height: 1.8;
     color: #000000;
   }
-  p {font-size: 14px;}
+  p {
+	font-size: 14px;
+}
+
   .margin {margin-bottom: 45px;}
   .bg-1 { 
     background-color: #ff0000; /* Red */
@@ -27,7 +30,7 @@
   }
   .bg-2 { 
     background-color: #ffffff; /* White */
-    color: #000000;
+    color: #ff0000;
   }
   .bg-3 { 
     background-color: #ffffff; /* White */
@@ -110,7 +113,7 @@
 
   .box-price {
   transition: box-shadow .3s;
- 
+  border: solid 4px #000000;
   border-radius:10px;
   background: rgb(106,4,10);
 background: linear-gradient(90deg, rgba(106,4,10,1) 0%, rgba(235,13,41,1) 50%, rgba(106,4,10,1) 100%);
@@ -139,9 +142,9 @@ background: linear-gradient(90deg, rgba(106,4,10,1) 0%, rgba(235,13,41,1) 50%, r
 	  <div class="collapse navbar-collapse" id="myNavbar">
 		<ul class="nav navbar-nav navbar-right">
 		  <li><a href=#about>ABOUT</a></li>
-		  <li><a href="https://bstportal.com/"><span style="color:#FF0000 ">PARENT COMPANY</span></a></li>
+		  <li><a href="https://bstportal.com/">PARENT COMPANY</a></li>
 		  <li><a href="/BST Portal Services.html">SERVICES</a></li>
-		  <li><a href="https://bstportal.com/manufacturers/pricing.php">PRICING</a></li>
+		  <li><a href="#pricing">PRICING</a></li>
 		  <li><a href="https://bstportal.com/manufacturers/login.php">LOG IN</a></li>
 		</ul>
 	  </div>
@@ -163,22 +166,22 @@ background: linear-gradient(90deg, rgba(106,4,10,1) 0%, rgba(235,13,41,1) 50%, r
 </div>
 
 <div class="container-fluid text-center">
-	<p style="font-size: 16px;" >As an affiliate of <span style="color: #e30613;"> BST</span> GlobalTrade.com you will obtain the following <span style="color: #e30613;"> BST</span> services:</p>
+	<p style="font-size: 20px;" >As an affiliate of <span style="color: #e30613;"> BST</span> GlobalTrade.com you will obtain the following <span style="color: #e30613;"> BST</span> services:</p>
 	<p class="text-justify" >
-		<span style="color: #e30613;">1) BST</span>WorldTradeExpo.com: A  FREE of Charge BST PERMANENT AFFILIATION, to optimize exposure and strengthen  the functions to Buy Sell Trade = BSTPortal.com.
+		<span style="color: #e30613;">1) BST</span><span style="font-size: 1.6rem;">WorldTradeExpo.com</span>: A  <span style="color: #e30613;">FREE of Charge BST</span> PERMANENT AFFILIATION, to optimize exposure and strengthen  the functions to <span style="color: #e30613;"> B</span>uy <span style="color: #e30613;">S</span>ell <span style="color: #e30613;">T</span>rade = <span style="color: #e30613;"> BST</span>Portal.com.
 		<br>
-		2) You will be listed in the Membership Publication of Manufacturers, a reference for Wholesale Distributors of Spare Parts, to establish direct contact with you, a window of opportunity to generate favorable business conditions.
+		<span style="color: #e30613;">2)</span> You will be listed in the <span style="color: #e30613; font-size: 1.5rem; ">Membership Publication of Manufacturers</span>, a reference for Wholesale Distributors of Spare Parts, to establish direct contact with you, a window of opportunity to generate favorable business conditions.
 		<br>
-		3) Access to the BST DATABASE for 12 months, currently more than +20,000 Wholesale Distributors of Bearings and Heavy-Duty Truck Parts, Buses and Trailers. A database constantly updated and increasing on a daily basis.  
+		<span style="color: #e30613;">3)</span> Access to the <span style="color: #e30613; font-size: 1.5rem; ">BST DATABASE</span> for 12 months, currently more than +20,000 Wholesale Distributors of Bearings and Heavy-Duty Truck Parts, Buses and Trailers. A database constantly updated and increasing on a daily basis.  
 		<br>
-		4) Manufacturer's Catalog Publications; A special segment where BST Affiliates and Potential Prospects can consult your product and service catalogs.
+		<span style="color: #e30613;">4) Manufacturer's Catalog Publications;</span> A special segment where <span style="color: #e30613; font-size: 1.5rem; ">BST</span> Affiliates and Potential Prospects can consult your product and service catalogs.
 		<br>	
-		5) BST Advertising Support Program: A Cost-Free Banner ad space for 90 days on the main and secondary pages of BSTPortal.com, the process to increase manufacture awareness directly  to both BST Members and Potential Prospects.  
+		<span style="color: #e30613;">5) BST</span> Advertising Support Program: <span style="color: #e30613;" >A Cost-Free Banner ad space for 90 days on the main and secondary pages of BST</span>Portal.com, the process to increase manufacture awareness directly  to both BST Members and Potential Prospects.  
 		<br>
-		6) BST Publications: The Monthly and Quarterly Electronic Newsletters will publish explicit statements about the Affiliated Manufacturers to the BST Database Network  of Bearings and Heavy-Duty Truck Parts, Buses and Trailers Wholesale Distributors.
+		<span style="color: #e30613;">6) BST</span> Publications: <span style="color: #e30613;" >The Monthly and Quarterly Electronic Newsletters</span> will publish explicit statements about the Affiliated Manufacturers to the <span style="color: #e30613;"> BST</span> Database Network  of Bearings and Heavy-Duty Truck Parts, Buses and Trailers Wholesale Distributors.
 	</p>
 	<br>
-	<p style="font-size: 16px;" >Make the World Market Your Global Market Thru <span style="color: #e30613;"> BST</span> Online Systems!</p>
+	<p style="font-size: 20px;" >Make the World Market Your Global Market Thru <span style="color: #e30613;"> BST</span> Online Systems!</p>
 </div>
 <div class="row" >
 
@@ -198,7 +201,6 @@ background: linear-gradient(90deg, rgba(106,4,10,1) 0%, rgba(235,13,41,1) 50%, r
         <h3 class="bg-2">POTENTIAL PROSPECTS</h3>
       </div>
       <div class="modal-body" style="color:#000000" align="left">
-
 
 	  		<form method="post" action="https://bstportal.com/manufacturers/base.php">
 				<label>Country</label>
@@ -457,7 +459,6 @@ background: linear-gradient(90deg, rgba(106,4,10,1) 0%, rgba(235,13,41,1) 50%, r
 											</select>
 				<br><input type="submit" name="submitear" value="Search" class="btn btn-primary">
 			</form>
-
 
       </div>
       <div class="modal-footer">
@@ -784,65 +785,59 @@ Three important steps towards improving preferred marketing challenges:  </p>
 <p>&nbsp;</p>
   </div>
 </div>
-<div class="row">
+<div class="row" id="pricing" >
 	<div class="text-center">
 		<h2>PRICING</h2>
 	</div>
 </div>
 <br>
-<div class="container text-center">
-	<div class="row align-items-center">
-	  <div class="col-sm-4 box-price">
-			<div class="card">
-				<h2 style="color: #FFFFFF;"  class="card-title">BST BEARINGS</h2>
-			<div class="card-body">
-			  <p style="color: #FFFFFF;" class="card-text">1 DATABASE <br>
-				Plus <span style="color: #000000; font-weight: 900;"> BST</span>WorldTradeExpo.com <br> <span style="color: #000000; font-size: 16px;" >FREE PERMANENT REGISTRATION</span>
-			  </p>
-			  <P style="color: yellow; font-size: 16px;" >$3,000 USD</P>
-			  <a href="#" class="btn-primary">SUBSCRIBE</a>
-			</div>
-	        </div>
-	  </div>
-	  <div class="col-sm-4 box-price">
-		<div class="card">
-			<h2 style="color: #FFFFFF;"  class="card-title">BST BEARINGS</h2>
-		<div class="card-body">
-		  <p style="color: #FFFFFF;" class="card-text">1 DATABASE <br>
-			Plus <span style="color: #000000; font-weight: 900;"> BST</span>WorldTradeExpo.com <br> <span style="color: #000000; font-size: 16px;" >FREE PERMANENT REGISTRATION</span>
-		  </p>
-		  <P style="color: yellow; font-size: 16px;" >$3,000 USD</P>
-		  <a href="#" class="btn-primary">SUBSCRIBE</a>
-		</div>
-		</div>
- 	 </div>
-	  <div class="col-sm-4 box-price">
-	<div class="card">
-		<h2 style="color: #FFFFFF;"  class="card-title">BST BEARINGS</h2>
-	<div class="card-body">
-	  <p style="color: #FFFFFF;" class="card-text">1 DATABASE <br>
-		Plus <span style="color: #000000; font-weight: 900;"> BST</span>WorldTradeExpo.com <br> <span style="color: #000000; font-size: 16px;" >FREE PERMANENT REGISTRATION</span>
-	  </p>
-	  <P style="color: yellow; font-size: 16px;" >$3,000 USD</P>
-	  <a href="#" class="btn-primary">SUBSCRIBE</a>
-	</div>
-	</div>
-	  </div>
-	</div>
+<div class="inline__container" >
+	<img src="./assets/BSTGlobalTradePrices.jpg" alt="" style="max-width: 1000px; min-width: 500px;">
+	<div class="col-sm-6" align="center"><a class="btn btn-lg" href="" style="margin-bottom:20px; background-color:#FF0000; color:#FFFFFF" data-toggle="modal" data-target="">Subscribe Options</a></div>
 </div>
 <br>
 <br>
 <div class="row">&nbsp;</div>
 <!-- Footer -->
-<footer class="container-fluid bg-4 text-center">
-  <p><span class="style1">BST MARKETING</span><br>
-  <span class="style1">BST</span> GLOBAL TRADE CORPORATION</p> 
-  <p><a target="_blank" href="http://www.bstportal.com/">www.bstportal.com</a> - <a target="_blank" href="http://www.bstportal.net/">www.bstportal.net</a> Wholesale Distributors</p>
-  <p><a target="_blank" href="http://www.bstglobaltrade.com/">www.bstglobaltrade.com</a> Manufacturers</p>
-  <p><a target="_blank" href="mailto:marketing@bstportal.com">marketing@bstportal.com</a> Tel. 1+307-620-3067 USA</p>
-  <p style="font-size: small; text-align: center;">Copyright © BSTPortal.com All Rights Reserved</p>
-  <i class='bx bxs-bank'></i> Secure transactions with PayPal and Bank Deposits
-<strong></strong></footer>
+
+<footer class="footer">
+	<div>
+	 <h3 style="text-align: center;">Contact Us</h3>
+	 <address class="footer__info-data">
+		 <div>
+			<i class="bx bxs-map" style=" font-size: 2rem;"></i>
+			 <span><br>
+			   <b style="color:#e30613;">BST</b> <b>GLOBAL TRADE CORPORATION</b>
+			  <br>1910 THOMES AVENUE
+			   <br>CHEYENNE WY 82001
+			   <br> +1(307) 620-3067 <i class="em em-flag-um" aria-role="presentation" aria-label="U.S. Outlying Islands Flag"></i>  USA
+			 </span>
+		 </div>
+	   <div>
+		 <i class="bx bx-envelope" style=" font-size: 2rem;"></i>
+		 <span class="footer__info-mail"><br>
+		 <a id="mail" href="mailto:marketing@bstportal.com?subject=Questions">marketing@bstportal.com</a> <br>
+		 <a id="mail" href="mailto:sales@bstportal.com?subject=Questions">sales@bstportal.com</a>
+		 </span>
+	   </div>
+	   <div>
+		 <i class="bx bx-world" style=" font-size: 2rem;"></i>
+		 <span class="footer__info-mail"><br>
+		 <a href="http://www.bstportal.com/">www.bstportal.com</a><br>
+		 <a href="http://www.bstportal.com/">www.bstportal.net</a><br>
+		 <i class="bx bxl-facebook"></i><br>
+		 <a href="https://www.facebook.com/profile.php?id=61550079221810&amp;locale=es_LA">Facebook</a>
+		 <br>
+		 <i class="bx bxl-linkedin"></i><br>
+		 <a href="https://www.linkedin.com/company/bstportal-com">Linkedin</a>
+		 </span>
+	   </div>
+	 </address>
+	 <p style="font-size: small; text-align: center;">Copyright © BSTPortal.com All Rights Reserved  <br>
+		<i class='bx bxs-bank'></i> Secure transactions with PayPal and Bank Deposits</p>
+	 
+	</div>
+	 </footer>
 
 
 
