--- a/BST Portal.html
+++ b/BST Portal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0059)https://bstportal.com/manufacturers/index.php#parentcompany -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
+  
   <title>BSTGlobalTrade.com</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./BST Portal_files/bootstrap.min.css">
@@ -85,9 +85,9 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href=#about>ABOUT</a></li>
-        <li><a href="https://bstportal.com/"><span style="color:#FF0000 ">PARENT COMPANY</span></a></li>
+        <li><a href="https://bstportal.com/">PARENT COMPANY</a></li>
         <li><a href="/BST Portal Services.html">SERVICES</a></li>
-        <li><a href="https://bstportal.com/manufacturers/pricing.php">PRICING</a></li>
+        <li><a href="/BST%20Portal%20Services.html#pricing">PRICING</a></li>
         <li><a href="https://bstportal.com/manufacturers/login.php">LOG IN</a></li>
       </ul>
     </div>
@@ -405,7 +405,7 @@
 		<ul><span class="style1">Primary objectives:</span></ul>
 		<ul><span class="style1">1)</span> To meet global needs.</ul>
 		<ul><span class="style1">2) Marketing of benefits through ADDED VALUES</span></ul>
-		<ul><span class="style1">3)</span> 3)	To create basic solutions to common problems and needs, through a marketing plan that identifies wholesale distributors in specialized fields through the application of strategies and tactics related to the benefit of the majority.</ul>
+		<ul><span class="style1">3)</span> To create basic solutions to common problems and needs, through a marketing plan that identifies wholesale distributors in specialized fields through the application of strategies and tactics related to the benefit of the majority.</ul>
 	</div>
 
 	<div>
@@ -430,11 +430,11 @@
 	</div>
 </div>
 <div class="container-fluid bg-2 text-justify">
-  <p><b style="font-size: 2rem;" ><span class="style1">BST</span>GLOBAL TRADE CORPORTATION</b> introduces its marketing services and our <span class="style1">BST DATABASE</span> to Manufactures in specific fields by means of <b style="font-size: 2rem;" ><span class="style1">BST</span>Portal.com</b> <span class="style1">our primary Web Portal</span> and specifically thru our Divisional Branch <b style="font-size: 2rem;" ><span class="style1">BST</span>GLOBAL TRADE CORPORTATION</b></p>
-  <p><b style="font-size: 2rem;" ><span class="style1">BST</span>Portal.com</b> is an Online System , whose software developed by <span class="style1">BST</span>, allows the International Link between wholesale distributors, so that affiliates can carry out commercial transactions through a centralized and automated means with similar organizations in the scope of the universal market and within their own national territory.</p>
+  <p><b style="font-size: 1.6rem;" ><span class="style1">BST</span>GLOBAL TRADE CORPORTATION</b> introduces its marketing services and our <span class="style1">BST DATABASE</span> to Manufactures in specific fields by means of <b style="font-size: 1.6rem;" ><span class="style1">BST</span>Portal.com</b> <span class="style1">our primary Web Portal</span> and specifically thru our Divisional Branch <b style="font-size: 1.6rem;" ><span class="style1">BST</span>GLOBAL TRADE CORPORTATION</b></p>
+  <p><b style="font-size: 1.6rem;" ><span class="style1">BST</span>Portal.com</b> is an Online System , whose software developed by <span class="style1">BST</span>, allows the International Link between wholesale distributors, so that affiliates can carry out commercial transactions through a centralized and automated means with similar organizations in the scope of the universal market and within their own national territory.</p>
   <p>During the last two years we have structured a research staff of well-trained research marketing professionals who have conducted a detailed analysis of the international Wholesale Distributer Market of Spare Parts in specific fields. </p>
-  <p>We can conclude that <b style="font-size: 2rem;" ><span class="style1">BST</span>Portal.com</b> is the link and the opportunity to do business with the global market of master and wholesale distributors, currently, more than +20,000 potential buyers and sellers integrated within our up-to-date and expanding day to day database in the following fields of business:</p>
-	<ol style="font-size: 1.8rem;">
+  <p>We can conclude that <b style="font-size: 1.6rem;" ><span class="style1">BST</span>Portal.com</b> is the link and the opportunity to do business with the global market of master and wholesale distributors, currently, more than +20,000 potential buyers and sellers integrated within our up-to-date and expanding day to day database in the following fields of business:</p>
+	<ol style="font-size: 1.7rem;">
 		<li>Bearings, Belts, Roller Chains, Couplings, Pulleys, Seals, Sprockets, and other Related Products.</li>
 		<li>Spare Parts for Buses, Heavy-Duty Trucks, Trailers, and Semi-Articulated Vehicles.</li>
 		<li>Spares for Agricultural and Heavy-Duty Construction and Mining Equipment.</li>
@@ -472,15 +472,45 @@
 </div>
 
 <!-- Footer -->
-<footer class="container-fluid bg-4 text-center">
-  <span class="style1">BST</span> GLOBAL TRADE CORPORATION</p> 
-  <p><a target="_blank" href="http://www.bstportal.com/">www.bstportal.com</a> - <a target="_blank" href="http://www.bstportal.net/">www.bstportal.net</a> Wholesale Distributors</p>
-  <p><a target="_blank" href="http://www.bstglobaltrade.com/">www.bstglobaltrade.com</a> Manufacturers</p>
-  <p><a target="_blank" href="mailto:marketing@bstportal.com">marketing@bstportal.com</a> Tel. 1+307-620-3067 USA</p>
-  <p style="font-size: small; text-align: center;">Copyright © BSTPortal.com All Rights Reserved</p>
-  <i class='bx bxs-bank'></i> Secure transactions with PayPal and Bank Deposits
-<strong></strong></footer>
 
+<footer class="footer">
+	<div>
+	 <h3 style="text-align: center;">Contact Us</h3>
+	 <address class="footer__info-data">
+		 <div>
+			<i class="bx bxs-map" style=" font-size: 2rem;"></i>
+			 <span><br>
+			   <b style="color:#e30613;">BST</b> <b>GLOBAL TRADE CORPORATION</b>
+			  <br>1910 THOMES AVENUE
+			   <br>CHEYENNE WY 82001
+			   <br> +1(307) 620-3067 <i class="em em-flag-um" aria-role="presentation" aria-label="U.S. Outlying Islands Flag"></i>  USA
+			 </span>
+		 </div>
+	   <div>
+		 <i class="bx bx-envelope" style=" font-size: 2rem;"></i>
+		 <span class="footer__info-mail"><br>
+		 <a id="mail" href="mailto:marketing@bstportal.com?subject=Questions">marketing@bstportal.com</a> <br>
+		 <a id="mail" href="mailto:sales@bstportal.com?subject=Questions">sales@bstportal.com</a>
+		 </span>
+	   </div>
+	   <div>
+		 <i class="bx bx-world" style=" font-size: 2rem;"></i>
+		 <span class="footer__info-mail"><br>
+		 <a href="http://www.bstportal.com/">www.bstportal.com</a><br>
+		 <a href="http://www.bstportal.com/">www.bstportal.net</a><br>
+		 <i class="bx bxl-facebook"></i><br>
+		 <a href="https://www.facebook.com/profile.php?id=61550079221810&amp;locale=es_LA">Facebook</a>
+		 <br>
+		 <i class="bx bxl-linkedin"></i><br>
+		 <a href="https://www.linkedin.com/company/bstportal-com">Linkedin</a>
+		 </span>
+	   </div>
+	 </address>
+	 <p style="font-size: small; text-align: center;">Copyright © BSTPortal.com All Rights Reserved  <br>
+		<i class='bx bxs-bank'></i> Secure transactions with PayPal and Bank Deposits</p>
+	 
+	</div>
+	 </footer>
 
 
 </body></html>
