--- a/BST Portal Services.html
+++ b/BST Portal Services.html
@@ -141,7 +141,7 @@ background: linear-gradient(90deg, rgba(106,4,10,1) 0%, rgba(235,13,41,1) 50%, r
 	  </div>
 	  <div class="collapse navbar-collapse" id="myNavbar">
 		<ul class="nav navbar-nav navbar-right">
-		  <li><a href=#about>ABOUT</a></li>
+		  <li><a href="Index.html">ABOUT</a></li>
 		  <li><a href="https://bstportal.com/">PARENT COMPANY</a></li>
 		  <li><a href="/BST Portal Services.html">SERVICES</a></li>
 		  <li><a href="#pricing">PRICING</a></li>
