--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,12 @@
   
   <title>BSTGlobalTrade.com</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./BST Portal_files/bootstrap.min.css">
-  <link href="./BST Portal_files/css" rel="stylesheet">
+  <link rel="stylesheet" href="./BSTPortal_files/bootstrap.min.css">
+  <link href="./BSTPortal_files/css" rel="stylesheet">
   <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-  <script src="./BST Portal_files/jquery.min.js.download"></script>
-  <script src="./BST Portal_files/bootstrap.min.js.download"></script>
+  <script src="./BSTPortal_files/jquery.min.js.download"></script>
+  <script src="./BSTPortal_files/bootstrap.min.js.download"></script>
   <style>
  h1, h2 {
     text-shadow: 2px 5px 25px #4a4a4a;
@@ -86,7 +86,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href=#about>ABOUT</a></li>
         <li><a href="https://bstportal.com/">PARENT COMPANY</a></li>
-        <li><a href="/BST Portal Services.html">SERVICES</a></li>
+        <li><a href="/BSTPortalServices.html">SERVICES</a></li>
         <li><a href="/BST%20Portal%20Services.html#pricing">PRICING</a></li>
         <li><a href="https://bstportal.com/manufacturers/login.php">LOG IN</a></li>
       </ul>
