--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,8 @@
   
   <title>BSTGlobalTrade.com</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./BSTPortal_files/index.css">
   <link rel="stylesheet" href="./BSTPortal_files/bootstrap.min.css">
-  <link href="./BSTPortal_files/css" rel="stylesheet">
   <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <script src="./BSTPortal_files/jquery.min.js.download"></script>
@@ -99,7 +99,7 @@
   <p>&nbsp;</p>
   <h1 class="style2">WELCOME MANUFACTURERS!</h1>
   <h2>Make the World Market Your Global Market Thru the <span class="style1">BST</span> DATABASE!</h2>
-  <img src="./BST Portal_files/globalizacion2.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+  <img src="./assets/WorldFlagsBSTGlobalTrade.png" class="img-responsive img-circle margin" style="display:inline" alt="BSTGlobalTrade.com" width="350" height="350">
 <h3 style="font-weight: 600;" >Our <span class="style1">BST DATABASE</span> of Wholesale Distributors of more than +20,000 is growing daily in accordance with the research process of location, evaluation and confirmation of contact information.
 </h3>
 <p> <a class="btn" href="https://bstportal.com/manufacturers/index.php#" data-toggle="modal" data-target="#myModal">BST DATABASE</a></p>
