--- a/Index.html
+++ b/Index.html
@@ -86,8 +86,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href=#about>ABOUT</a></li>
         <li><a href="https://bstportal.com/">PARENT COMPANY</a></li>
-        <li><a href="/BSTPortalServices.html">SERVICES</a></li>
-        <li><a href="/BST%20Portal%20Services.html#pricing">PRICING</a></li>
+        <li><a href="./BSTPortalServices.html">SERVICES</a></li>
+        <li><a href="./BSTPortalServices.html">PRICING</a></li>
         <li><a href="https://bstportal.com/manufacturers/login.php">LOG IN</a></li>
       </ul>
     </div>
