--- a/BSTPortalServices.html
+++ b/BSTPortalServices.html
@@ -3,8 +3,8 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
   <title>BST Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./BSTPortal_files/index.css">
   <link rel="stylesheet" href="./BSTPortal_files/bootstrap.min.css">
-  <link href="./BSTPortal_files/css" rel="stylesheet">
   <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <script src="./BSTPortal_files/jquery.min.js.download"></script>
@@ -143,7 +143,7 @@ background: linear-gradient(90deg, rgba(106,4,10,1) 0%, rgba(235,13,41,1) 50%, r
 		<ul class="nav navbar-nav navbar-right">
 		  <li><a href="Index.html">ABOUT</a></li>
 		  <li><a href="https://bstportal.com/">PARENT COMPANY</a></li>
-		  <li><a href="/BSTPortalServices.html">SERVICES</a></li>
+		  <li><a href="./BSTPortalServices.html">SERVICES</a></li>
 		  <li><a href="#pricing">PRICING</a></li>
 		  <li><a href="https://bstportal.com/manufacturers/login.php">LOG IN</a></li>
 		</ul>
