--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,12 @@
   
   <title>BSTGlobalTrade.com</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./BSTPortal_files/index.css">
-  <link rel="stylesheet" href="./BSTPortal_files/bootstrap.min.css">
+  <link href="BSTPortal_files/index.css" rel="stylesheet">
+  <link rel="stylesheet" href="BSTPortal_files/bootstrap.min.css">
   <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-  <script src="./BSTPortal_files/jquery.min.js.download"></script>
-  <script src="./BSTPortal_files/bootstrap.min.js.download"></script>
+  <script src="BSTPortal_files/jquery.min.js.download"></script>
+  <script src="BSTPortal_files/bootstrap.min.js.download"></script>
   <style>
  h1, h2 {
     text-shadow: 2px 5px 25px #4a4a4a;
@@ -44,6 +44,12 @@
   background-size: cover;
   background-position: center;
   }
+  .bg-6 {
+  background-image: url(./assets/bg-6.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
   .container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
@@ -67,6 +73,15 @@
   .style1 {color: #FF0000}
   .style2 {margin-bottom: 45px; }
   .style3 {color: #00FF00}
+
+.img-card{
+	margin: 3px;
+}
+.img-c{
+	max-width: 300px;
+	max-height: 300px;
+}
+
   </style>
 </head>
 <body>
@@ -429,52 +444,66 @@
 		</video>
 	</div>
 </div>
+
 <div class="container-fluid bg-2 text-justify">
-  <p><b style="font-size: 1.6rem;" ><span class="style1">BST</span>GLOBAL TRADE CORPORTATION</b> introduces its marketing services and our <span class="style1">BST DATABASE</span> to Manufactures in specific fields by means of <b style="font-size: 1.6rem;" ><span class="style1">BST</span>Portal.com</b> <span class="style1">our primary Web Portal</span> and specifically thru our Divisional Branch <b style="font-size: 1.6rem;" ><span class="style1">BST</span>GLOBAL TRADE CORPORTATION</b></p>
-  <p><b style="font-size: 1.6rem;" ><span class="style1">BST</span>Portal.com</b> is an Online System , whose software developed by <span class="style1">BST</span>, allows the International Link between wholesale distributors, so that affiliates can carry out commercial transactions through a centralized and automated means with similar organizations in the scope of the universal market and within their own national territory.</p>
-  <p>During the last two years we have structured a research staff of well-trained research marketing professionals who have conducted a detailed analysis of the international Wholesale Distributer Market of Spare Parts in specific fields. </p>
-  <p>We can conclude that <b style="font-size: 1.6rem;" ><span class="style1">BST</span>Portal.com</b> is the link and the opportunity to do business with the global market of master and wholesale distributors, currently, more than +20,000 potential buyers and sellers integrated within our up-to-date and expanding day to day database in the following fields of business:</p>
-	<ol style="font-size: 1.7rem;">
-		<li>Bearings, Belts, Roller Chains, Couplings, Pulleys, Seals, Sprockets, and other Related Products.</li>
-		<li>Spare Parts for Buses, Heavy-Duty Trucks, Trailers, and Semi-Articulated Vehicles.</li>
-		<li>Spares for Agricultural and Heavy-Duty Construction and Mining Equipment.</li>
-	</ol>
-
-<a name="parentcompany"></a>
-  		<p>&nbsp;</p>
-  		<p>&nbsp;</p>
-  		<p>&nbsp;</p>
-
-<div class="inline__container" >
-	<a style="padding-left: 5%; padding-right: 5%;" class="btn" href="./BST Portal Services.html">BST SERVICES</a>
-	<h2><strong class="style1">4 WEBSITES AND AN INTERNATIONAL TRADE EXPO CENTER IN ONE PORTAL! </strong></h2>
-	<img class="img_1" src="./assets/BSTPortalSites.png" alt="BSTPortal.com sites">
+	<div>
+		<p><b style="font-size: 1.6rem;" ><span class="style1">BST</span>GLOBAL TRADE CORPORTATION</b> introduces its marketing services and our <span class="style1">BST DATABASE</span> to Manufactures in specific fields by means of <b style="font-size: 1.6rem;" ><span class="style1">BST</span>Portal.com</b> <span class="style1">our primary Web Portal</span> and specifically thru our Divisional Branch <b style="font-size: 1.6rem;" ><span class="style1">BST</span>GLOBAL TRADE CORPORTATION</b></p>
+		<p><b style="font-size: 1.6rem;" ><span class="style1">BST</span>Portal.com</b> is an Online System , whose software developed by <span class="style1">BST</span>, allows the International Link between wholesale distributors, so that affiliates can carry out commercial transactions through a centralized and automated means with similar organizations in the scope of the universal market and within their own national territory.</p>
+		<p>During the last two years we have structured a research staff of well-trained research marketing professionals who have conducted a detailed analysis of the international Wholesale Distributer Market of Spare Parts in specific fields. </p>
+		<p>We can conclude that <b style="font-size: 1.6rem;" ><span class="style1">BST</span>Portal.com</b> is the link and the opportunity to do business with the global market of master and wholesale distributors, currently, more than +20,000 potential buyers and sellers integrated within our up-to-date and expanding day to day database in the following fields of business:</p>
+		<ol style="font-size: 1.7rem;">
+			<ul><span class="style1">1)</span> Bearings, Belts, Roller Chains, Couplings, Pulleys, Seals, Sprockets, and other Related Products.</ul>
+			<ul><span class="style1">2)</span> Spare Parts for Buses, Heavy-Duty Trucks, Trailers, and Semi-Articulated Vehicles.</ul>
+			<ul><span class="style1">3)</span> Spares for Agricultural and Heavy-Duty Construction and Mining Equipment.</ul>
+		</ol>
+	</div>
 </div>
 
-<p>Through <span class="style1">BST</span>Portal.com, its affiliates can <span class="style1">B</span>uy - <span class="style1">S</span>ell - <span class="style1">T</span>rade &amp; <span class="style3">$EARN</span> thru the exchange of information directly with other wholesale distributors worldwide. The following among other tasks can be achieved:</p>
+		<div class="container-fluid text-justify bg-6" style="height: 660px; display: flex;" >
+			<div class="inline__container" >
+				<h2><strong class="style1">4 WEBSITES AND AN INTERNATIONAL TRADE EXPO CENTER IN ONE PORTAL! </strong></h2>
+				<br>
+				<div style="display: flex; gap: 2rem;" >
+					<div class="img-card" >
+						<div >
+							<img class="img-c" src="/assets/BSTBearingscount.png" alt="BSTBeraings 7647 Wholesale Distributors NETWORK ON THE RISE" >
+						</div>
+					</div>
+					<div class="img-card" >
+						<div >
+							<img class="img-c" src="/assets/BSTTruckPartscount.png" alt="BSTBeraings 9545 Wholesale Distributors NETWORK ON THE RISE">
+						</div>
+					</div>
+				</div>
+				<img class="img_1" src="./assets/BSTPortalSites.png" alt="BSTPortal.com sites">
+				<a style="margin-left: 5%; margin-right: 5%; font-size: 2rem;" class="btn" href="/BSTPortalServices.html">BST SERVICES</a>
+			</div>
+		</div>
 
+
+<div class="container-fluid bg-2 text-justify">
+	<div>
+		<p>Through <span class="style1">BST</span>Portal.com, its affiliates can <span class="style1">B</span>uy - <span class="style1">S</span>ell - <span class="style1">T</span>rade &amp; <span class="style3">$EARN</span> thru the exchange of information directly with other wholesale distributors worldwide. The following among other tasks can be achieved:</p>
+			<p>&nbsp;</p>
+			<ol>
+				<ul><span class="style1">1)</span> Balance between supply and demand.</ul>
+				<ul><span class="style1">2)</span> Increased profitability, cash flow and purchasing power.</ul>
+				<ul><span class="style1">3)</span> Unlimited coverage for commercial needs and opportunities.</ul>
+				<ul><span class="style1">4)</span> Participate in the possibility of purchases at a greater scale.</ul>
+				<ul><span class="style1">5)</span> Have better inventory turnovers.</ul>
+				<ul><span class="style1">6)</span> Expand commercial coverage at a local and global level.</ul>
+				<ul><span class="style1">7)</span> Build local, regional, and global commercial alliances.</ul>
+			</ol>
   		<p>&nbsp;</p>
-
-<ol>
-	<li>Balance between supply and demand.</li>
-	<li>Increased profitability, cash flow and purchasing power.</li>
-	<li>Unlimited coverage for commercial needs and opportunities.</li>
-	<li>Participate in the possibility of purchases at a greater scale.</li>
-	<li>Have better inventory turnovers.</li>
-	<li>Expand commercial coverage at a local and global level.</li>
-	<li>Build local, regional, and global commercial alliances.</li>
-</ol>
-
-  		<p>&nbsp;</p>
-
-<p>OUR OBJECTIVE IS TO OFFER OUR NETWORK OF AFFILIATES, AND POTENTIAL PROSPECTS, A DIRECT CONTACT WITH THE MOST IMPORTANT MANUFACTURERS OF SPARE PARTS, <span class="style1">THE MEANS TO EXPAND THEIR BUSINESSES THRU ONE CONTACT CHANNEL</span>, THE <span class="style1">BST</span>PORTAL.COM BUSINESS SOLUTION. </p>
-
+		<p>OUR OBJECTIVE IS TO OFFER OUR NETWORK OF AFFILIATES, AND POTENTIAL PROSPECTS, A DIRECT CONTACT WITH THE MOST IMPORTANT MANUFACTURERS OF SPARE PARTS, <span class="style1">THE MEANS TO EXPAND THEIR BUSINESSES THRU ONE CONTACT CHANNEL</span>, THE <span class="style1">BST</span>PORTAL.COM BUSINESS SOLUTION. </p>
+	</div>
 </div>
 
 <!-- Footer -->
 
 <footer class="footer">
 	<div>
+		
 	 <h3 style="text-align: center;">Contact Us</h3>
 	 <address class="footer__info-data">
 		 <div>
@@ -510,7 +539,7 @@
 		<i class='bx bxs-bank'></i> Secure transactions with PayPal and Bank Deposits</p>
 	 
 	</div>
-	 </footer>
+</footer>
 
 
 </body></html>
