--- a/BSTPortalServices.html
+++ b/BSTPortalServices.html
@@ -145,7 +145,7 @@ background: linear-gradient(90deg, rgba(106,4,10,1) 0%, rgba(235,13,41,1) 50%, r
 		  <li><a href="https://bstportal.com/">PARENT COMPANY</a></li>
 		  <li><a href="./BSTPortalServices.html">SERVICES</a></li>
 		  <li><a href="#pricing">PRICING</a></li>
-		  <li><a href="https://bstportal.com/manufacturers/login.php">LOG IN</a></li>
+		  <li><a href="/Login.html">LOG IN</a></li>
 		</ul>
 	  </div>
 	</div>
@@ -826,10 +826,10 @@ Three important steps towards improving preferred marketing challenges:  </p>
 		 <a href="http://www.bstportal.com/">www.bstportal.com</a><br>
 		 <a href="http://www.bstportal.com/">www.bstportal.net</a><br>
 		 <i class="bx bxl-facebook"></i><br>
-		 <a href="https://www.facebook.com/profile.php?id=61550079221810&amp;locale=es_LA">Facebook</a>
+		 <a href="https://www.facebook.com/profile.php?id=61554348477284&locale=es_LA">Facebook</a>
 		 <br>
 		 <i class="bx bxl-linkedin"></i><br>
-		 <a href="https://www.linkedin.com/company/bstportal-com">Linkedin</a>
+		 <a href="https://www.linkedin.com/company/bstglobaltrade-com">Linkedin</a>
 		 </span>
 	   </div>
 	 </address>
