--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0059)https://bstportal.com/manufacturers/index.php#parentcompany -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
   
   <title>BSTGlobalTrade.com</title>
@@ -103,7 +102,7 @@
         <li><a href="https://bstportal.com/">PARENT COMPANY</a></li>
         <li><a href="./BSTPortalServices.html">SERVICES</a></li>
         <li><a href="./BSTPortalServices.html">PRICING</a></li>
-        <li><a href="https://bstportal.com/manufacturers/login.php">LOG IN</a></li>
+        <li><a href="/Login.html">LOG IN</a></li>
       </ul>
     </div>
   </div>
@@ -528,10 +527,10 @@
 		 <a href="http://www.bstportal.com/">www.bstportal.com</a><br>
 		 <a href="http://www.bstportal.com/">www.bstportal.net</a><br>
 		 <i class="bx bxl-facebook"></i><br>
-		 <a href="https://www.facebook.com/profile.php?id=61550079221810&amp;locale=es_LA">Facebook</a>
+		 <a href="https://www.facebook.com/profile.php?id=61554348477284&locale=es_LA">Facebook</a>
 		 <br>
 		 <i class="bx bxl-linkedin"></i><br>
-		 <a href="https://www.linkedin.com/company/bstportal-com">Linkedin</a>
+		 <a href="https://www.linkedin.com/company/bstglobaltrade-com">Linkedin</a>
 		 </span>
 	   </div>
 	 </address>
