--- a/Login.html
+++ b/Login.html
@@ -182,6 +182,15 @@
 		 <a href="https://www.linkedin.com/company/bstglobaltrade-com">Linkedin</a>
 		 </span>
 	   </div>
+     <div>
+      <i class="bx bx-archive" style=" font-size: 2rem;"></i>
+      <span class="footer__info-mail"><br>
+      <a href="https://bstportal.com/bstbearings/terminos.php">Terms of Use</a><br>
+      <a href="https://bstportal.com/bstbearings/politicas.php">Privacy Policy</a><br>
+      <a href="https://bstportal.com/bstbearings/disclaimer.php">Summary Legal Notices</a><br>
+      <a href="http://www.bstportal.com/">BST CONSULTATION ACCESS</a><br>
+      </span>
+      </div>
 	 </address>
 	 <p style="font-size: small; text-align: center;">Copyright © BSTPortal.com All Rights Reserved  <br>
 		<i class='bx bxs-bank'></i> Secure transactions with PayPal and Bank Deposits</p>
