--- a/Index.html
+++ b/Index.html
@@ -540,6 +540,7 @@
 		<a href="https://bstportal.com/bstbearings/politicas.php">Privacy Policy</a><br>
 		<a href="https://bstportal.com/bstbearings/disclaimer.php">Summary Legal Notices</a><br>
 		<a href="http://www.bstportal.com/">BST CONSULTATION ACCESS</a><br>
+		<a href="https://bstportal.com/bstbearings/politicaswebsites.php">BSTPortal.com Websites</a><br>
 		</span>
 		</div>
 	 </address>
